fix for profile list with too long name

--- a/apparelrow/sass/src/partials/_application.sass
+++ b/apparelrow/sass/src/partials/_application.sass
@@ -2229,7 +2229,6 @@ body.settings, body.about
       margin-bottom: 1em
       width: 210px
       float: left
-      height: 50px
       overflow: hidden
       padding-bottom: 10px
       margin-right: 33px
@@ -2239,6 +2238,8 @@ body.settings, body.about
         float: left
       &.column-3
         margin-right: 0
+      &.column-1
+        clear: left
       a.profile-link, span.profile-link
         font-size: 1.1em
         font-weight: bold
